// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attach appsecret_proof if appSecret option given 1`] = `
Object {
  "access_token": "_fb_graph_api_access_token_",
  "appsecret_proof": "c3d9a02ac88561d9721b3cb2ba338c933f0666b68ad29523393b830b3916cd91",
  "batch": "[{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"bar/baz\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=2\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=3\\",\\"omit_response_on_success\\":false}]",
}
`;

exports[`sends ok 1`] = `
Object {
  "access_token": "_graph_api_access_token_",
  "batch": "[{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"bar/baz\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=2\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=3\\",\\"omit_response_on_success\\":false}]",
}
`;

exports[`throw if one single job fail 1`] = `
Object {
  "batch": Array [
    Object {
      "error": undefined,
      "job": Object {
        "channelId": "messenger:default:id:foo",
        "request": Object {
          "attached_files": "file_0",
          "body": Object {
            "id": 1,
            "recipient": Object {
              "id": "foo",
            },
          },
          "method": "POST",
          "omit_response_on_success": false,
          "relative_url": "me/messages",
        },
      },
      "result": Object {
        "body": Object {
          "message_id": "xxx",
          "recipient_id": "xxx",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": [OAuthException: you should not passed!],
      "job": Object {
        "channelId": "messenger:default:id:foo",
        "request": Object {
          "attached_files": "file_1",
          "body": Object {
            "id": 2,
            "recipient": Object {
              "id": "foo",
            },
          },
          "method": "POST",
          "omit_response_on_success": false,
          "relative_url": "bar/baz",
        },
      },
      "result": Object {
        "body": Object {
          "error": Object {
            "code": 999,
            "fbtrace_id": "DuNgzaHdmcb",
            "message": "you should not passed!",
            "type": "OAuthException",
          },
        },
        "code": 400,
      },
      "success": false,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channelId": "messenger:default:id:foo",
        "request": Object {
          "body": Object {
            "id": 3,
            "recipient": Object {
              "id": "foo",
            },
          },
          "method": "POST",
          "omit_response_on_success": false,
          "relative_url": "me/messages",
        },
      },
      "result": Object {
        "body": Object {
          "message_id": "xxx",
          "recipient_id": "xxx",
        },
        "code": 200,
      },
      "success": true,
    },
  ],
  "errors": Array [
    [OAuthException: you should not passed!],
  ],
  "success": false,
}
`;

exports[`upload files with form data if binary attached on job 1`] = `
"-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name=\\"file_0\\"

_file0_
-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name=\\"file_1\\"; filename=\\"YouDontSay.jpg\\"
Content-Type: image/jpeg

_file1_
-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name=\\"access_token\\"

_graph_api_access_token_
-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name=\\"batch\\"

[{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=1\\",\\"omit_response_on_success\\":false,\\"attached_files\\":\\"file_0\\"},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"bar/baz\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=2\\",\\"omit_response_on_success\\":false,\\"attached_files\\":\\"file_1\\"},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22foo%22%7D&id=3\\",\\"omit_response_on_success\\":false}]
-----MULTIPART_SEPARATOR-------
"
`;
